--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -125,6 +125,13 @@ span {
   &.responsive {
     @media (max-width: 768px) {
       flex-direction: column;
+      &.spaced > * {
+        margin: 0;
+        margin-top: 1rem;
+        &:first-child {
+          margin-top: 0;
+        }
+      }
     }
   }
   &.column {
