add category and product custom fields

--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -1,5 +1,5 @@
 .filters {
-  background-color: #F3F4F6;
+  background-color: #f3f4f6;
   padding-top: 4rem;
   .hero-bg {
     height: 28rem;
@@ -9,69 +9,63 @@
       height: 25rem;
     }
 
-    
     .hero-image {
-        background-image: url("/images/Rectangle-3040.png");
-        background-position: center center;
-        align-self: flex-end;
-        background-size: cover;
-        height: 25rem;
-        width: 65%;
-    
+      background-position: center center;
+      align-self: flex-end;
+      background-size: cover;
+      height: 25rem;
+      width: 65%;
+    }
+    .hero-text {
+      position: absolute;
+      width: 50%;
+      background: #fafafa;
+      left: 5rem;
+      top: 3.5rem;
+      padding: 2rem;
+      border-radius: 0.8rem;
+      opacity: 0.9;
+
+      p:first-of-type {
+        font-size: 2.3rem;
+        font-weight: 800;
+        width: 90%;
+        color: #1f1f1f;
+        vertical-align: top;
+        line-height: 3rem;
+        margin: 1rem 0;
       }
-      .hero-text{
-        position: absolute;
-        height: 18rem;
-        width: 50%;
-        background:#FAFAFA;
-        left:5rem;
-        top:3.5rem;
-        padding: 2rem;
-        border-radius: 0.8rem;
-        opacity: 0.9;
-        
+      p:nth-child(2) {
+        color: #1f1f1f;
+      }
+    }
+    .occasions-mobile {
+      background-image: url("/images/Rectangle-3040-mobile.png");
+      height: 20rem;
+      background-position: center center;
+      background-size: cover;
+
+      .mobile-card {
         p:first-of-type {
-            font-size: 2.3rem;
-            font-weight: 800;
-            width: 90%;
-            color:#1F1F1F;
-            vertical-align: top;
-            line-height: 3rem;
-            margin: 1rem 0;
-          }
-          p:nth-child(2){
-            color: #1F1F1F;
-          }
-      }
-      .occasions-mobile {
-        background-image: url("/images/Rectangle-3040-mobile.png");
-        height: 20rem;
-        background-position: center center;
-        background-size: cover;
-        
-        
-        .mobile-card {
-             p:first-of-type{
-              font-size: 1.8rem;
-              font-weight: 700;
-             }
+          font-size: 1.8rem;
+          font-weight: 700;
+        }
 
-          position:relative;
-          top: 170px;
-          width: 90%;
-          background-color: white;
-          margin: auto;
-          padding: 1rem;
-          border-radius: 0.8rem;
+        position: relative;
+        top: 170px;
+        width: 90%;
+        background-color: white;
+        margin: auto;
+        padding: 1rem;
+        border-radius: 0.8rem;
 
-          p:last-of-type{
-            margin-top: 1rem;
-            width:10rem;
-            border-bottom: 0.1rem solid ;
-          }
+        p:last-of-type {
+          margin-top: 1rem;
+          width: 10rem;
+          border-bottom: 0.1rem solid;
         }
       }
-    
+    }
   }
 
   .title {
@@ -146,15 +140,14 @@
 
     .product-wrapper {
       width: 100%;
-       .sorts{
+      .sorts {
         justify-content: end;
-       }
-       .sorts-mobile{
+      }
+      .sorts-mobile {
         @media (max-width: 650px) {
-
           margin: 12rem 0 1rem 0;
-          }
-       }
+        }
+      }
       .date-wrapper {
         display: flex;
         justify-content: space-between;
@@ -178,11 +171,11 @@
           width: 14rem;
         }
       }
-      .question{
-        min-width:5rem;
+      .question {
+        min-width: 5rem;
         @media (max-width: 420px) {
-            width: auto;
-          }
+          width: auto;
+        }
       }
     }
 
@@ -234,7 +227,6 @@
     border-bottom: 0.1rem solid;
     margin-right: 1rem;
   }
-  
 }
 
 .spinner {
@@ -261,7 +253,6 @@
   @media (max-width: 650px) {
     display: block;
     margin-left: 2.2rem;
-  
   }
 
   .btn {
@@ -346,9 +337,9 @@
 }
 
 .search-wrapper {
-    width: 100%;
-    border: 0.1rem solid #DADADA;
-    border-radius: 0.4rem;
+  width: 100%;
+  border: 0.1rem solid #dadada;
+  border-radius: 0.4rem;
   @media (max-width: 650px) {
     width: 50%;
   }
