--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -846,6 +846,9 @@ span {
 .text-regular {
   font-size: 1.3rem;
 }
+.text-semilarge{
+  font-size: 1.5rem;
+}
 
 .text-large {
   font-size: 2.2rem;
@@ -878,6 +881,9 @@ span {
 .white-bg {
   background-color: #fff;
   padding: 1rem;
+}
+.faint-text{
+  color:#535353;
 }
 // 16px: 1.2rem
 // 32px 2.3rem
