--- a/components/breadcrumb/Breadcrumb.module.scss
+++ b/components/breadcrumb/Breadcrumb.module.scss
@@ -7,6 +7,11 @@
     display: flex;
     align-items: center;
     list-style: none;
+    font-weight: normal;
+
+    &:last-child {
+      font-weight: 500;
+    }
   }
 
   .icon {
