--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -19,7 +19,6 @@
     }
     .hero-text {
       position: absolute;
-      height: 18rem;
       width: 50%;
       background: #fafafa;
       left: 5rem;
@@ -35,8 +34,8 @@
         vertical-align: top;
         line-height: 3rem;
         margin: 1rem 0;
-            font-weight: 400;
-            line-height: 45.94px;
+        font-weight: 400;
+        line-height: 45.94px;
       }
       p:nth-child(2) {
         color: #1f1f1f;
@@ -162,14 +161,13 @@
     .product-wrapper {
       width: 100%;
       .sorts {
- 
         justify-content: end;
         @media (min-width: 768px) {
-                margin: 1.8rem 2.5rem 1.8rem 0;
-          }
+          margin: 1.8rem 2.5rem 1.8rem 0;
+        }
         @media (min-width: 1400px) {
-                margin-right:4rem;
-          }
+          margin-right: 4rem;
+        }
       }
       .sorts-mobile {
         @media (max-width: 768px) {
@@ -198,29 +196,28 @@
           width: 14rem;
         }
         @media (min-width: 768px) {
-        border: 1px solid;
-        border-radius: 0.25rem;
+          border: 1px solid;
+          border-radius: 0.25rem;
           background-color: white;
         }
       }
 
-      .sort > div > svg{
+      .sort > div > svg {
         @media (min-width: 768px) {
           margin: 0.1rem 0;
-           display: flex;
-           align-items: center;
-           justify-content: center;
-
-          }
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
       }
-      .sort > div{
+      .sort > div {
         @media (min-width: 768px) {
           margin: 0.1rem 0;
-           display: flex;
-           align-items: center;
-           justify-content: center;
-           border: 0;
-          }
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border: 0;
+        }
       }
       .question {
         min-width: 5rem;
@@ -321,7 +318,7 @@
       }
     }
   }
-  .btn > h3{
+  .btn > h3 {
     font-weight: 400;
     color: #1f1f1f;
   }
@@ -397,4 +394,10 @@
   @media (max-width: 768px) {
     width: 50%;
   }
+}
+
+.info {
+  background-color: #fcf6fd;
+  padding: 0.8rem 1.1rem;
+  margin-top: 1rem;
 }
