Fix extra white space on mobile

--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -98,7 +98,7 @@
       min-width: 11rem;
     }
     .img-wrapper {
-      height: 15rem;
+      // height: 15rem;
       .flower-image {
         height: 15rem;
       }
