--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -63,7 +63,7 @@
       width: 105vw;
       justify-content: center;
       display: flex;
-      font-size: 1rem;
+      font-size: 1.2rem;
       padding: 1.5rem;
       transition: 0.3s ease-out;
       box-shadow: 0 0.2rem 0.8rem -0.2rem rgba(0, 0, 0, 0.1);
@@ -100,13 +100,13 @@
 
       .dropdown {
         position: fixed;
-        padding: 3rem 5rem;
-        top: 7.8rem;
-        left: 10vw;
+        padding: 3rem;
+        top: 8.2rem;
+        left: 12vw;
         background-color: white;
-        width: 80vw;
+        width: 76vw;
         box-shadow: 0 0.8rem 0.8rem rgba(0, 0, 0, 0.1);
-        font-size: 1rem;
+        font-size: 1.1rem;
         overflow: hidden;
         transition: all 0.6s ease-out;
         pointer-events: none;
@@ -123,7 +123,7 @@
           width: 90vw;
           left: 5vw;
           padding: 3rem;
-          font-size: 0.9rem;
+          font-size: 1.1rem;
         }
 
         .subtitle {
@@ -142,16 +142,17 @@
           }
           &.grid {
             display: grid;
-            grid-template-columns: repeat(3, max-content);
+            grid-template-columns: repeat(3, 3fr);
             column-gap: 2.5rem;
-
+            &.four-x-grid {
+              grid-template-columns: repeat(4, 4fr);
+            }
             .title {
               margin: 0;
               font-weight: bold;
               font-size: inherit;
               margin-bottom: 1rem;
               display: inline-block;
-              white-space: nowrap;
             }
 
             .grand-title {
@@ -258,10 +259,10 @@
     opacity: 0;
     visibility: hidden;
     position: fixed;
-    top: 5rem;
+    top: 4.8rem;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 5rem);
+    height: calc(100vh - 4.8rem);
     background-color: white;
     z-index: 101;
     padding: 2rem 3rem;
@@ -313,21 +314,20 @@
         padding: 1rem;
         max-height: 80rem;
         .sub-link-title {
-          padding: 0.5rem;
+          padding: 0.9rem;
         }
       }
       .sub-child {
         max-height: 0;
-        padding: 0 1rem;
+        padding: 0 1.5rem;
         width: 100%;
         background-color: white;
         transition: all 0.3s ease-in-out;
         overflow: hidden;
         &.active {
-          padding: 1rem;
           max-height: 80rem;
           .sub-link-title {
-            padding: 0.5rem;
+            padding: 0.9rem;
           }
         }
       }
@@ -335,7 +335,7 @@
       .sub-link-title {
         font-size: 1.2rem;
         display: flex;
-        padding: 0 0.5rem;
+        padding: 0 0.9rem;
         align-items: center;
         transition: 0.3s ease-out;
       }
@@ -1011,45 +1011,45 @@
       // }
     }
 
-         @media (max-width: 500px) {
-          grid-template-columns: 1fr;
-          row-gap: 3rem;
-         }
+    @media (max-width: 500px) {
+      grid-template-columns: 1fr;
+      row-gap: 3rem;
+    }
   }
 
-//   .bottom {
-//     display: grid;
-//     grid-template-columns: 30% repeat(3, 1fr);
-//     justify-content: space-between;
-//     margin-top: 1.5rem;
-//     column-gap: 1rem;
+  //   .bottom {
+  //     display: grid;
+  //     grid-template-columns: 30% repeat(3, 1fr);
+  //     justify-content: space-between;
+  //     margin-top: 1.5rem;
+  //     column-gap: 1rem;
 
-//     @media (max-width: 768px) {
-//       grid-template-columns: 1fr 1fr;
-//       grid-template-rows: repeat(3, max-content);
-//       gap: 2rem;
+  //     @media (max-width: 768px) {
+  //       grid-template-columns: 1fr 1fr;
+  //       grid-template-rows: repeat(3, max-content);
+  //       gap: 2rem;
 
-//       & > *:first-child {
-//         order: 5;
-//         grid-column: 1 / -1;
-//         grid-row: 4;
-//       }
+  //       & > *:first-child {
+  //         order: 5;
+  //         grid-column: 1 / -1;
+  //         grid-row: 4;
+  //       }
 
-//       & > *:nth-child(2) {
-//         grid-column: 1 / -1;
-//         grid-row: 1;
-//       }
+  //       & > *:nth-child(2) {
+  //         grid-column: 1 / -1;
+  //         grid-row: 1;
+  //       }
 
-//       & > *:nth-child(3) {
-//         grid-column: 1 / -1;
-//         grid-row: 2;
-//       }
-//     }
+  //       & > *:nth-child(3) {
+  //         grid-column: 1 / -1;
+  //         grid-row: 2;
+  //       }
+  //     }
 
-//     @media (max-width: 500px) {
-//       column-gap: 1rem;
-//     }
-//   }
+  //     @media (max-width: 500px) {
+  //       column-gap: 1rem;
+  //     }
+  //   }
 }
 
 .auth-wrapper {
