extended select component

--- a/components/select/Select.module.scss
+++ b/components/select/Select.module.scss
@@ -147,7 +147,7 @@ $placeholder: rgba(0, 0, 0, 0.6);
     background-color: rgba(0, 0, 0, 0.008);
   }
   .option:hover {
-    background-color: #ffdddd;
+    background-color: #b140da35;
   }
   .option.initial:hover {
     background-color: inherit;
