--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -124,41 +124,61 @@
   width: 100%;
   top: -3rem;
 }
-.featured-occasion-image {
-  width: 65vw;
-  margin-bottom: 2rem;
-  @media (max-width: 768px) {
-    width: 100%;
-    border-radius: 0.5rem;
-  }
-}
-.featured-occasion-details {
-  position: absolute;
-  top: 30%;
-  right: 55vw;
+.featured-occasion {
   display: flex;
-  flex-direction: column;
-  background-color: white;
-  box-shadow: 0 0 1rem 0.5rem rgba(0, 0, 0, 0.1);
-  padding: 1.5rem;
-  align-items: center;
-  width: 25rem;
-  text-align: center;
+  justify-content: end;
+  width: 100%;
+  position: relative;
+  margin: 1rem 0 3rem;
   @media (max-width: 768px) {
-    position: relative;
-    right: unset;
-    top: unset;
-    width: 90%;
-    margin: -5rem auto 1rem;
-    border-radius: 0.5rem;
+    flex-direction: column;
+  }
+  .featured-occasion-image {
+    width: 65vw;
+    @media (max-width: 768px) {
+      width: 100%;
+      border-radius: 0.5rem;
+    }
+  }
+  .featured-occasion-details {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    box-shadow: 0 0 1rem 0.5rem rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    align-items: center;
+    width: 34rem;
+    text-align: center;
+    @media (max-width: 1300px) {
+      padding: 1.5rem;
+      align-items: center;
+      width: 25rem;
+    }
+    @media (max-width: 768px) {
+      position: relative;
+      right: unset;
+      top: unset;
+      width: 90%;
+      margin: -5rem auto 1rem;
+      border-radius: 0.5rem;
+    }
   }
   .title {
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    @media (max-width: 1300px) {
+      font-size: 1.5rem;
+    }
   }
   .subtitle {
     margin: 2rem 0;
-    font-size: 1rem;
+    font-size: 1.3rem;
+    @media (max-width: 1300px) {
+      font-size: 1rem;
+    }
     @media (max-width: 768px) {
       font-size: 1.1rem;
       margin: 1rem 0;
@@ -166,7 +186,10 @@
   }
   .button {
     width: 100%;
-    padding: 0.8rem;
+    padding: 1rem;
+    @media (max-width: 1300px) {
+      padding: 0.8rem;
+    }
   }
 }
 .quote-flex {
