--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -2,6 +2,9 @@
   background-color: #f3f4f6;
   padding-top: 4rem;
   transition: 0.3s ease-out;
+  @media (max-width: 768px) {
+    padding-top: 0;
+  }
   &.has-scrolled {
     padding-top: 0;
   }
@@ -32,19 +35,19 @@
       opacity: 0.9;
 
       p:first-of-type {
-        font-size: 2.3rem;
+        font-size: 3.3rem;
         width: 90%;
         color: #1f1f1f;
         vertical-align: top;
         line-height: 3rem;
         margin: 1rem 0;
         font-weight: 400;
-        line-height: 45.94px;
+        line-height: 4.5rem;
       }
       p:nth-child(2) {
         color: #1f1f1f;
         font-weight: 400;
-        line-height: 28px;
+        line-height: 2.8rem;
       }
     }
     .hero-text > ul {
