--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -258,7 +258,7 @@
   .mobile-sidebar {
     opacity: 0;
     visibility: hidden;
-    position: absolute;
+    position: fixed;
     top: 4.8rem;
     left: 0;
     width: 100%;
