fixed accessiblity bugs

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -126,7 +126,7 @@
 }
 .featured-occasion {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   width: 100%;
   position: relative;
   margin: 1rem 0 3rem;
