--- a/components/occasion-card/OccasionCard.module.scss
+++ b/components/occasion-card/OccasionCard.module.scss
@@ -28,7 +28,7 @@
   }
 
   @media (max-width: 768px) {
-    width: 48%;
+    width: calc(100vw / 2 - 2rem);
   }
 
   .detail {
@@ -59,8 +59,8 @@
     margin-top: 0.5rem;
     text-align: center;
     display: -webkit-box;
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -69,7 +69,8 @@
       height: 2.6rem;
     }
     @media (max-width: 768px) {
-      border-bottom: 1px solid #eff0f6;
+      height: 4rem;
+      border-bottom: 0.1rem solid #eff0f6;
     }
   }
   .buy-btn {
@@ -102,6 +103,7 @@
     margin-top: 1rem;
     @media (max-width: 768px) {
       padding: 0.6rem;
+      margin-top: 0.4rem;
     }
   }
 
