--- a/components/occasion-card/OccasionCard.module.scss
+++ b/components/occasion-card/OccasionCard.module.scss
@@ -51,6 +51,7 @@
     font-weight: 400;
     @media (max-width: 768px) {
       font-size: 1.2rem;
+      height: 3.2rem;
     }
   }
   .subtitle {
