--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -54,7 +54,7 @@
       padding: 0.5rem;
       font-weight: 400;
       font-size: 1rem;
-      color: #FFFFFF;
+      color: #ffffff;
       width: 100%;
       @media (max-width: 400px) {
         margin-top: 0.5rem;
@@ -111,18 +111,32 @@
 
   .detail {
     padding: 0.6rem 1rem;
+    @media (max-width: 340px) {
+      padding: 0.6rem;
+    }
   }
   .name {
     display: -webkit-box;
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
+    line-clamp: 1;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     text-transform: uppercase;
-    height: auto;
+    height: 2rem;
     font-size: 1.25rem;
     font-weight: 400;
+    @media (max-width: 1300px) {
+      line-clamp: 2;
+      -webkit-line-clamp: 2;
+      height: 3.4rem;
+    }
+    @media (max-width: 768px) {
+      height: 3.2rem;
+    }
+    @media (max-width: 340px) {
+      font-size: 1.15rem;
+    }
     &.only-name {
       font-size: 1.3rem;
     }
@@ -138,10 +152,17 @@
     overflow: hidden;
     text-overflow: ellipsis;
     height: 2.5rem;
+    @media (max-width: 1300px) {
+      line-clamp: 3;
+      -webkit-line-clamp: 3;
+      height: 3.6rem;
+    }
     @media (max-width: 768px) {
-      border-bottom: 0.1rem solid #eff0f6;
       font-size: 1rem;
-      height: 2.7rem;
+      height: 3.6rem;
+    }
+    @media (max-width: 340px) {
+      font-size: 0.9rem;
     }
   }
   .buy-btn {
@@ -150,20 +171,20 @@
     font-size: 0.8rem;
     overflow: hidden;
     white-space: nowrap;
-    height: 30px;
     width: auto;
     transition: width 1s ease;
 
-    @media (min-width: 420px) {
+    @media (min-width: 768px) {
       width: 2rem;
       text-align: end;
     }
 
-    @media (max-width: 420px) {
+    @media (max-width: 768px) {
       background-image: none;
       color: white;
       background-color: #b240da;
       width: 100%;
+      height: 2.5rem;
       margin-top: 0.5rem;
     }
   }
@@ -198,20 +219,20 @@
     font-weight: 400;
     font-size: 1.1rem;
     width: 100%;
-    @media (max-width: 400px) {
+    @media (max-width: 768px) {
       margin-top: 0.5rem;
     }
   }
 
   .price-btn-wrapper {
     display: flex;
-    margin-top: 0.5rem;
+    margin-top: 0.3rem;
     &.price {
       justify-content: space-between;
       font-size: 1.1rem;
     }
 
-    @media (max-width: 420px) {
+    @media (max-width: 768px) {
       font-size: 0.875rem;
       .price-text {
         margin-right: 3.5rem;
@@ -240,6 +261,6 @@
     }
   }
   &:hover {
-    border: 1px solid #b88fc7;
+    border: 0.1rem solid #b88fc7;
   }
 }
