--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -70,7 +70,7 @@
         }
 
         position: relative;
-        top: 170px;
+        top: 17rem;
         width: 90%;
         background-color: white;
         margin: auto;
