--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -1,6 +1,13 @@
 .filters {
   background-color: #f3f4f6;
   padding-top: 4rem;
+  transition: 0.3s ease-out;
+  &.has-scrolled {
+    padding-top: 0;
+  }
+  @media (max-width: 768px) {
+    padding-top: 0;
+  }
   .hero-bg {
     height: 28rem;
     width: 100%;
