updated header content

--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -133,6 +133,9 @@
         }
         .sub-link {
           font-weight: 400;
+          &.padded-top {
+            padding-top: 2rem;
+          }
           & > * {
             margin-bottom: 1rem;
             display: block;
