--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -789,6 +789,10 @@
         margin-bottom: 1rem;
       }
     }
+
+    .checkbox {
+      align-items: flex-start;
+    }
   }
 
   .password-reset {
