--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -49,6 +49,9 @@
       -webkit-box-orient: vertical;
       text-overflow: ellipsis;
       height: 1.5rem;
+      @media (max-width: 768px) {
+        height: 2.4rem;
+      }
     }
     .gift-btn {
       padding: 0.5rem;
