--- a/pages/product/products.module.scss
+++ b/pages/product/products.module.scss
@@ -308,9 +308,9 @@
   .mobile-cart {
     position: fixed;
     bottom: 0;
-    width: 90%;
+    width: 100%;
     background-color: white;
-    padding: 1rem 0;
+    padding: 1rem;
     left: 50%;
     transform: translateX(-50%);
     border-top: 0.1rem #e5e7eb solid;
@@ -336,7 +336,7 @@
 
   .social-icons {
     @media (max-width: 768px) {
-      margin: 15px 0 0 25px;
+      margin-top: .5rem;
     }
 
     .social-icon {
@@ -355,16 +355,6 @@
       .icon {
         height: 1.4rem;
         width: 1.4rem;
-      }
-
-      @media (max-width: 768px) {
-        height: 1.3rem;
-        width: 1.3rem;
-
-        .icon {
-          height: 1.3rem;
-          width: 1.3rem;
-        }
       }
     }
 
