updated build specs

--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -136,6 +136,9 @@
           &.padded-top {
             padding-top: 2rem;
           }
+          &.gifts-dropdown {
+            font-size: 1.4rem;
+          }
           & > * {
             margin-bottom: 1rem;
             display: block;
