feat: Add and remove mobile-cart on view

--- a/pages/checkout.module.scss
+++ b/pages/checkout.module.scss
@@ -232,7 +232,7 @@
   }
 
   .payment-methods {
-    margin-top: 2.5rem;
+    margin-top: .5rem;
     .method {
       border: 0.1rem solid #e5e7eb;
       padding: 0.8rem;
