--- a/pages/product/products.module.scss
+++ b/pages/product/products.module.scss
@@ -377,6 +377,12 @@
     background-color: #f9fafb;
     padding: 1rem;
     margin-bottom: 1rem;
+    border: 0.1rem solid transparent;
+    transition: 0.3s ease-out;
+
+    &.highlight {
+      border: 0.1rem solid #b240da;
+    }
 
     .size {
       padding: 0.5rem;
