--- a/pages/blog/blog.module.scss
+++ b/pages/blog/blog.module.scss
@@ -5,6 +5,10 @@
   margin: 0 8rem;
   font-weight: 400;
 
+  @media (max-width: 768px) {
+    margin: 0 2rem;
+  }
+
   .hero-header {
     .hero-img {
       background-image: url('/images/blog-page-flower.png');
@@ -15,9 +19,6 @@
       @media (max-width: 768px) {
         background-image: url("/images/blog-bg-mobile.png");
         height: 24rem;
-        background-position: 0 1rem;
-        background-size: 100vw auto;
-        color: white;
       }
     }
 
@@ -29,6 +30,11 @@
       letter-spacing: 0.2rem;
       word-spacing: 0.5rem;
       text-transform: uppercase;
+
+      @media (max-width: 420px) {
+        font-size: 1.5rem;
+        margin-bottom: 0rem;
+      }
     }
 
     .header-details {
@@ -50,6 +56,7 @@
         .last-updated {
           color: #3B82F6;
         }
+
       }
 
       .quick-action {
@@ -60,6 +67,10 @@
         .copy {
           height: 1.3rem;
           width: 1.3rem;
+        }
+
+        @media (max-width: 560px) {
+          margin-bottom: 2rem;
         }
       }
 
@@ -74,6 +85,12 @@
 
       }
 
+
+      @media (max-width: 560px) {
+        flex-direction: column;
+        align-items: normal;
+
+      }
     }
   }
 
@@ -81,6 +98,10 @@
     display: flex;
     gap: 0 3rem;
     margin: 3rem 0;
+
+    @media (max-width: 560px) {
+      flex-direction: column;
+    }
 
     .content {
       width: 70%;
@@ -90,10 +111,26 @@
         font-weight: 400;
         line-height: 2.25rem;
       }
+
+      @media (max-width: 768px) {
+        width: 50%;
+      }
+
+      @media (max-width: 560px) {
+        width: 100%;
+      }
     }
 
     .side {
       width: 30%;
+
+      @media (max-width: 768px) {
+        width: 50%;
+      }
+
+      @media (max-width: 560px) {
+        width: 100%;
+      }
 
       .trending {
         display: flex;
@@ -103,6 +140,13 @@
 
         hr {
           width: 30%;
+          color: #6B7280;
+        }
+
+        p {
+          font-size: 1.125rem;
+          font-weight: 600;
+          font-family: 'Noto Sans', sans-serif;
         }
       }
 
@@ -243,7 +287,7 @@
   }
 
   .popular-sections {
-  
+
     @media (max-width: 768px) {
       padding: 0 2rem;
     }
@@ -287,4 +331,11 @@
   color: #16A34A;
   padding: 0.5rem;
   background-color: #F0FDF4;
+}
+
+.trend-img {
+  object-position: center;
+  object-fit: cover;
+  height: 7.5rem;
+  width: 7.5rem;
 }
