--- a/components/blog-card/BlogCard.module.scss
+++ b/components/blog-card/BlogCard.module.scss
@@ -5,6 +5,7 @@
   width: 26vw;
   background-color: rgba(255, 255, 255, 0.745);
   transition: 0.3s ease-out;
+
   &:hover {
     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2);
   }
@@ -15,6 +16,12 @@
     padding: 0.6rem 1rem 1rem;
     @media (max-width: 768px) {
       padding: 0.6rem;
+    }
+
+    .duration-detail {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
   .title {
@@ -64,5 +71,31 @@
     display: flex;
     align-items: center;
     margin-top: 1rem;
+  }
+
+  &.row {
+    @media (max-width: 768px) {
+      display: flex;
+    }
+
+    .duration-detail {
+      @media (max-width: 768px) {
+        display: none;
+      }
+    }
+    .img-wrapper {
+      @media (max-width: 768px) {
+        width: 40%;
+        min-width: 12rem;
+        height: 12rem;
+        border-radius: 0;
+      }
+      .flower-image {
+        @media (max-width: 768px) {
+          height: 12rem;
+          border-radius: 0;
+        }
+      }
+    }
   }
 }
