--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -106,6 +106,10 @@ span {
   display: inline-block;
 }
 
+.min-width {
+  width: min-content;
+}
+
 .title {
   font-size: 1.8rem;
   &.small {
@@ -231,6 +235,9 @@ span {
 }
 .text-center {
   text-align: center;
+}
+.auto-center {
+  margin: 0 auto;
 }
 .grayed {
   color: #6b7280;
