--- a/pages/blog/article.module.scss
+++ b/pages/blog/article.module.scss
@@ -1,11 +1,17 @@
 .article {
-
+color: #202020;
   &>* {
     box-sizing: border-box;
     font-weight: 400;
     border: 0;
     padding: 0%;
     margin: 0;
+    font-size: 1.3rem;
+
+  }
+
+  ul{
+  margin-left: 3rem ;
   }
 
   img {
@@ -13,8 +19,9 @@
     object-position: center;
     width: 17.917rem;
     height: 16.625rem;
-    display: inline;
+    display: block;
     padding: 0 0.3rem;
+    margin: auto;
 
     @media (max-width: 768px) {
       width: 50%;
@@ -39,11 +46,14 @@
   }
 
   h1,
-  h2 {
+  h2,h3 {
     font-size: 1.875rem;
     margin: 2rem 0;
-  }
 
+  }
+h1,h2,h3,h4,h5,h6{
+    color: #374151;
+}
   blockquote {
     margin: 2rem 0;
     font-size: 1.5rem;
